<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:label="@null">

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:background="@color/material_dynamic_primary50"-->
<!--                android:label="@null"/>-->
        </FrameLayout>


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:label="@null"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar2"
                    android:layout_width="wrap_content"
                    android:label="@null"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_back"
                    />

                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    />

            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_below="@id/topbar"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="346dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/poster_film" />

            <TextView
                android:id="@+id/textViewJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul"
                android:textSize="20sp"
                android:textStyle="bold"
                android:lineSpacingExtra="4dp"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textViewGenre"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/genre"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_star"/>

                <TextView
                    android:id="@+id/textViewRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_score"
                    android:textSize="18sp"
                    android:lineSpacingExtra="4dp"/>


            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tahun"
                android:textSize="16sp"
                android:textStyle="bold"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:id="@+id/textViewTahun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tahun"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/director_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:id="@+id/textViewDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_unfav"
        android:backgroundTint="@color/blue"
        app:layout_anchorGravity="bottom|right|end" />

    </RelativeLayout>


